# hands-on-llms

./: .gitignore  02_open_ai.ipynb  03_prompting.ipynb  04.5_prompting_exercise.ipynb  07_summary.ipynb  09_documents.ipynb  10_evaluation.ipynb  README.md  mkdocs.yml  pyproject.toml  requirements-handson.txt
.devcontainer/: README.md  devcontainer.json  uv_setup.sh
.github/workflows/: deploy.yml
Notebooks/: 02_open_ai.ipynb  04.5_prompting_exercise.ipynb  08_data_storage.ipynb  09_documents.ipynb  arc_solver.ipynb  chroma.sqlite3  opeai_call.ipynb  utils.py
Notebooks/finetuning/data/: medical_generalization.jsonl
Notebooks/finetuning/prompts/memo/: input.jinja  system.jinja
Notebooks/tools/: models.py
docs/: 2_open_ai.ipynb  index.md
docs/finetuning/: index.md  openai-finetuning.ipynb  result.csv  template_manager.py
docs/finetuning/data/: medical_generalization.csv  medical_memorization.csv  medical_memorization.jsonl
docs/setting-up/: codespaces.md  running-locally.md
docs/tools/: brave_search.py  tools.ipynb  tools.json
docs/tools/prompts/: tool_prompt.jinja
hands_on_llms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
